# lavalink-load-balancer

./: LICENSE  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
src/lava_speed/: __init__.py  client.py  node_manager.py
tests/: test_client.py  test_node_manager.py
